objects/CMPL123CME__MedDRA_Hierarchy_and_Lowest_Level_term__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__LLT_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lowest Level term with Common Preferred Term</description>
        <inlineHelpText>Lowest Level term with Common Preferred Term</inlineHelpText>
        <label>LLT Code</label>
        <referenceTo>CMPL123CME__MedDRA_Lowest_Level_Term__c</referenceTo>
        <relationshipLabel>MedDRA Hierarchy and Lowest Level term</relationshipLabel>
        <relationshipName>Hierarchy_and_Lowest_Level_term</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Transaction_ID__c</fullName>
        <description>Used to store an unique ID</description>
        <label>Transaction ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hierarchy_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hierarchy Code with Common Preferred Term</description>
        <inlineHelpText>Hierarchy Code with Common Preferred Term</inlineHelpText>
        <label>Hierarchy Code</label>
        <referenceTo>CMPL123CME__MedDRA_Hierarchy__c</referenceTo>
        <relationshipLabel>MedDRA Hierarchy and Lowest Level term</relationshipLabel>
        <relationshipName>Hierarchy_and_Lowest_Level_term</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__meddra_release_key__c</fullName>
        <description>Used to store an release info</description>
        <externalId>true</externalId>
        <label>MedDRA Release Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>MedDRA Hierarchy and Lowest Level term</label>
    <nameField>
        <label>Hierarchy and Lowest Level term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedDRA Hierarchy and Lowest Level term</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>